[package]
name = "prickly"
version = "0.1.0"
authors = ["BenHall-7 <Benjaminjahall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
prc-rs = "1.3.2"
regex = "1.4"
