[package]
name = "prickly"
version = "0.1.0"
authors = ["BenHall-7 <Benjaminjahall@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.19"
prc-rs = "1.3.2"
regex = "1.4"
structopt = "0.3"
itertools = "0.10"

[dependencies.tui]
git = "https://github.com/BenHall-7/tui-rs.git"
default-features = false
features = ['crossterm']
